// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Event should be no render startTimeZone if startTimeZone === endTimeZone 1`] = `
<div
  className="CalendarEvent"
>
  <div
    className="CalendarEvent__title"
  >
    Title
  </div>
  <div
    className="CalendarEvent__meta"
  >
    <div
      className="CalendarEvent__row"
    >
      <div>
        <span>
          С 
          <span>
            11/15/2017, 2:30 PM
          </span>
        </span>
        <span>
          <span>
             до 
          </span>
          <span>
            11/15/2017, 3:30 PM
          </span>
          <span
            className="CalendarEventParticipant__zone"
          >
             (
            (UTC+03:00) Moscow, St. Petersburg, Volgograd
            )
          </span>
        </span>
      </div>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Описание
      </span>
      <span
        className="CalendarEvent__value CalendarEvent__description"
      >
        Description

      </span>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Организатор
      </span>
      <span
        className="CalendarEvent__value"
      >
        <span>
          Тарасов Никита
        </span>
      </span>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Участники
      </span>
      <span
        className="CalendarEvent__value"
      >
        <span>
          <span>
            dcrm-support@yandex.ru
          </span>
          <span>
            , 
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Calendar Event should be null if no props 1`] = `null`;

exports[`Calendar Event should be render startTimeZone if startTimeZone !== endTimeZone 1`] = `
<div
  className="CalendarEvent"
>
  <div
    className="CalendarEvent__title"
  >
    Title
  </div>
  <div
    className="CalendarEvent__meta"
  >
    <div
      className="CalendarEvent__row"
    >
      <div>
        <span>
          С 
          <span>
            11/15/2017, 2:30 PM
          </span>
          <span
            className="CalendarEventParticipant__zone"
          >
             (
            (UTC+03:00) Moscow, St. Petersburg, Volgograd
            )
          </span>
        </span>
        <span>
          <span>
             до 
          </span>
          <span>
            11/15/2017, 3:30 PM
          </span>
          <span
            className="CalendarEventParticipant__zone"
          >
             (
            (UTC+00:00) London
            )
          </span>
        </span>
      </div>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Описание
      </span>
      <span
        className="CalendarEvent__value CalendarEvent__description"
      >
        Description

      </span>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Организатор
      </span>
      <span
        className="CalendarEvent__value"
      >
        <span>
          Тарасов Никита
        </span>
      </span>
    </div>
    <div
      className="CalendarEvent__row"
    >
      <span
        className="CalendarEvent__label"
      >
        Участники
      </span>
      <span
        className="CalendarEvent__value"
      >
        <span>
          <span>
            dcrm-support@yandex.ru
          </span>
          <span>
            , 
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;
